--- a/styles/style.css
+++ b/styles/style.css
@@ -16,11 +16,74 @@ html {
 }
 
 body {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(../images/Bg2.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 10), rgba(0, 0, 0, 10)),
+    url(../images/BG5.jpg) ;
 
   background-size: cover;
+  
+
+
+  overflow-x:hidden;
+
 }
+.footer {
+  padding: 40px ;
+  background-color: #1C1C1C;
+
+  position: relative;
+  top: 600px;
+  height: auto;
+}
+.footer .social {
+  text-align: center;
+  padding-bottom: 25px;
+  color: #f4f4f4;
+}
+.footer .social a {
+  font-size: 24px;
+  color: inherit;
+  border: 1px solid rgb(250, 247, 247);
+  width: 40px;
+  height: 40px;
+  line-height: 38px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin: 0 8px;
+  opacity: 0.75;
+}
+.footer .social a:hover {
+  opacity: 0.9;
+}
+.footer ul {
+  margin-top: 0;
+  padding: 0;
+  list-style: none;
+  text-align: center;
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 0;
+  color: white;
+}
+.footer ul a {
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.8;
+}
+.footer ul li {
+  display: inline-block;
+  padding: 0 15px;
+}
+.footer ul a:hover {
+  opacity: 1;
+}
+.footer .copyright {
+  margin-top: 15px;
+  text-align: center;
+  font-size: 13px;
+  color: rgb(246, 242, 242);
+}
+
 
 .reveal {
   position: relative;
@@ -43,10 +106,6 @@ body {
   opacity: 1;
 }
 
-/* .ourService{
-  position: relative;
-  top: 224px
-} */
 
 .ourService h2 {
   text-align: center;
@@ -63,6 +122,9 @@ body {
   font-weight: 700;
   text-transform: capitalize;
 }
+
+
+
 
 .card-body a {
   text-align: center;
@@ -100,22 +162,9 @@ body {
   filter: drop-shadow(0 0 0.75rem #555555);
 }
 
-.card:hover {
-  zoom: 105%;
-  transition: all 0.3s ease-in-out;
-}
 
-.zoomed {
-  zoom: 105%;
-}
 
-.zoomed:hover {
-  zoom: 110%;
-}
 
-.card-body {
-  background-color: #1e1f20;
-}
 
 html {
   font-size: 62.5%;
@@ -143,10 +192,7 @@ a {
 
   /* font-family: 'Lato', sans-serif; */
 }
-.card2 h1 {
-  color: white;
-  font-size: 3rem;
-}
+
 
 .LandingContent h1 {
   position: relative;
@@ -176,15 +222,159 @@ a {
   margin-top: 10px;
 }
 
-.header {
+/* .header {
   border-bottom: 1px solid #e2e8f0;
+} */
+
+
+
+
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
 }
+
+.BG5{
+  width: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 10), rgba(0, 0, 0, 10)),
+  url(../images/testBG.jpeg);
+  background-size: cover ;
+  height: fit-content;
+
+  position: relative;
+  top: -15px;
+}
+
+
+.heroIMG{
+  width: 200px;
+  height: 110px;
+  float: left;
+
+  position: absolute;
+  left: 2%;
+  top: 25%;
+
+}
+
+
+
+.container2 span{
+  font-size: 15px;
+  position: relative;
+  left: 10%;
+}
+
+/* .container2 {
+  position: relative;
+  top: 0%
+} */
+
+
+
+/* Centered text */
+.centered {
+  position: absolute;
+  top: 40%;
+  left: 5%;
+  transform: translate(-50%, -50%);
+  text-transform: capitalize; 
+
+}
+
+.centered h3{
+
+
+  text-transform: capitalize; 
+
+  position: relative;
+  left: 50%;
+  font-size: 3rem;
+
+
+  
+
+}
+
+.centered h1{
+  font-size: 5rem;
+  text-transform: capitalize; 
+  position: relative;
+  left: 70%;
+  color: white;
+  top: -35px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  letter-spacing: .2rem;
+
+
+}
+
+.centered button{
+  position: absolute;
+  left: 50%;
+  top: 185%;
+  border: 3px solid black;
+  background-color: white;
+  color: black;
+
+  color: rgb(0, 0, 0);
+
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+
+
+
+}
+
+.phone{
+  width: 900px;
+  height: auto;
+  position: absolute;
+  left: 45%;
+  top: 20%;
+}
+
+.button1{
+  width: 256px;
+  height: 70px;
+
+}
+
+
+
+
+
+.hamburger {
+  display: none;
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #101010;
+}
+
 
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem 1.5rem;
+  background-color: #101010;
+  border-bottom: 1px solid #e2e8f0;
+  position: relative;
+  top: -15px;
 }
 
 .hamburger {
@@ -247,7 +437,7 @@ a {
   padding-top: 100px;
   padding-bottom: 100px;
   background-image: linear-gradient(175deg, rgb(20, 19, 19) 50%, #292329 50%, #161616);
-  margin-top: 325px;
+  /* margin-top: 325px; */
 
 }
 .section-contact .container {
@@ -288,7 +478,11 @@ a {
   -ms-grid-columns: 1fr;
   grid-template-columns: 1fr;
   grid-gap: 16px;
-  background-color: #fff;
+  /* background-color: #fff; */
+  background-image: linear-gradient(rgba(0.7, 0.5, 0.5, 0.8), rgba(0.6, 0.7, 0.7, 0.9)),
+  url(../images/contactBG.jpeg);
+
+background-size: cover;
   padding: 32px;
   border-radius: 16px;
   -webkit-box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
@@ -356,44 +550,9 @@ a {
 }
 /*# sourceMappingURL=main.css.map */
 
-footer {
-  position: absolute;
 
-  background-color: #111;
-  height: auto;
-  width: 100%;
-  padding-top: 40px;
-  color: azure;
 
-  top: 2400px;
-}
 
-.footer-content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-}
-
-.footer-content h3 {
-  font-size: 1.8rem;
-  font-weight: 400;
-  text-transform: capitalize;
-  line-height: 3rem;
-}
-
-.footer-Nav ul li a {
-  border: 1.3px solid white;
-  padding: 6px 15px;
-
-  border-radius: 50px;
-}
-
-.footer-Nav ul li a:hover {
-  background-color: #f14400;
-  color: white;
-}
 
 .socials .fa-brands {
   color: white;
@@ -419,23 +578,7 @@ footer {
   color: #00acee;
 }
 
-.footer-Nav {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  position: relative;
 
-  left: 27%;
-  margin-top: 52px;
-}
-
-.footer-content p {
-  max-width: 500px;
-  margin: 10px auto;
-  line-height: 28px;
-  font-size: 14px;
-}
 
 .socials {
   display: flex;
@@ -522,13 +665,7 @@ footer {
   }
 }
 
-@media (max-width: 500px) {
-  .footer-menu ul {
-    display: flex;
-    margin-top: 10px;
-    margin-bottom: 20px;
-  }
-}
+
 
 @media (max-width: 600px) {
   .LandingContent img {
@@ -593,7 +730,7 @@ section {
   width: 100%;
   display: grid;
   place-items: center;
-  position: relative;
+  position: absolute;
   top: 100px;
 }
 .row {
@@ -618,22 +755,7 @@ section {
   transition: 0.5s;
 }
 
-.card2 {
-  width: auto;
-  height: auto;
-  padding: 2em 1.5em;
-  background: linear-gradient(#1e1f20 50%, #7000f1 50%);
-  background-size: 100% 200%;
-  background-position: 0 2.5%;
-  border-radius: 5px;
-  box-shadow: 0 0 35px rgba(0, 0, 0, 0.12);
-  cursor: pointer;
-  transition: 0.5s;
-  position: relative;
-  left: 110%;
 
-  top: 150%;
-}
 
 input[type="text"],
 select {
