--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -207,10 +207,10 @@ a {
   left: 60px;
 }
 
-.LandingContent img {
+/* .LandingContent img {
   float: right;
   width: 50%;
-}
+} */
 
 .LandingContent p {
   /* font-family: 'Arvo', serif; */
