--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -238,7 +238,7 @@ a {
 .BG5{
   width: 100%;
   background: linear-gradient(rgba(0, 0, 0, 10), rgba(0, 0, 0, 10)),
-  url(../images/testBG.jpeg);
+  url(../images/BG5.jpg);
   background-size: cover ;
   height: fit-content;
 
