--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -17,7 +17,7 @@ html {
 
 body {
   background-image: linear-gradient(rgba(0, 0, 0, 10), rgba(0, 0, 0, 10)),
-    url(../images/BG5.jpg) ;
+    url(../images/Bg2.jpg) ;
 
   background-size: cover;
   
