--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -881,7 +881,7 @@ input[type="submit"]:hover {
 
 }
 
-@media screen and (max-width: 420px) {
+@media (max-width: 640px) and (min-width: 320px) {
   .phone{
     display: none;
   }
