--- a/styles/style.css
+++ b/styles/style.css
@@ -952,7 +952,7 @@ input[type="submit"]:hover {
   
 }
 
-@media (min-width: 430px) {
+@media (max-width: 430px) {
   section {
     padding: 1em 3em;
 
