--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -952,7 +952,7 @@ input[type="submit"]:hover {
   
 }
 
-@media screen and (min-width: 375px) and (min-height: 812px) {
+@media screen and (min-width: 375px)  {
   section {
     padding: 1em 3em;
 
@@ -968,42 +968,43 @@ input[type="submit"]:hover {
   .centered h1{
 
     position: absolute;
-    top: -144px;
+    top: -83px;
     /* left: 131px; */
   }
 
   .section-contact{
     position: absolute;
-    top: 200%
+    top: 330%
   }
 
   .footer{
     position: absolute;
-    top: 320%
+    top: 520%
 
   }
 
   .mobile {
     display: block;
-    width: 134px;
+    width: 121px;
     height: auto;
     position: absolute;
     left: 7%;
-    top: 22%;
+    top: 25%;
 
 }
 
   .centered h3{
     position: relative;
-    top: -72px;
-    left: 177px;
+    top: -5px;
+    left: 168px;
+    font-size: 1.6rem;
 
   }
 
   .centered button{
     position: absolute;
-    top: 0;
-    left: 70%;
+    top: 110%;
+    left: 66%;
   }
 
 
