--- a/styles/style.css
+++ b/styles/style.css
@@ -968,13 +968,13 @@ input[type="submit"]:hover {
   .centered h1{
 
     position: absolute;
-    top: -144px;
+    top: -83px;
     /* left: 131px; */
   }
 
   .section-contact{
     position: absolute;
-    top: 320%
+    top: 330%
   }
 
   .footer{
@@ -985,25 +985,26 @@ input[type="submit"]:hover {
 
   .mobile {
     display: block;
-    width: 134px;
+    width: 121px;
     height: auto;
     position: absolute;
     left: 7%;
-    top: 22%;
+    top: 25%;
 
 }
 
   .centered h3{
     position: relative;
-    top: -72px;
-    left: 177px;
+    top: -5px;
+    left: 168px;
+    font-size: 1.6rem;
 
   }
 
   .centered button{
     position: absolute;
-    top: 0;
-    left: 70%;
+    top: 110%;
+    left: 66%;
   }
 
 
