--- a/styles/style.css
+++ b/styles/style.css
@@ -952,7 +952,7 @@ input[type="submit"]:hover {
   
 }
 
-@media screen and (min-width: 375px)  {
+@media  (max-width: 375px)  {
   section {
     padding: 1em 3em;
 
