--- a/styles/style.css
+++ b/styles/style.css
@@ -863,7 +863,7 @@ input[type="submit"]:hover {
 }
 @media screen and (min-width: 992px) {
   section {
-    padding: 1em 3em;
+    padding: 1em 2rem;
     position: relative;
     top: 200px;
   }
