--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -952,7 +952,12 @@ input[type="submit"]:hover {
   
 }
 
-@media screen and (min-width: 375px)  {
+@media screen and (max-width: 375px)  {
+
+  .BG5{
+    height: auto;
+  }
+
   section {
     padding: 1em 3em;
 
