--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -949,12 +949,18 @@ input[type="submit"]:hover {
 
   }
 
+  .BG5{
+    height: 50%;
+  }
+
   
 }
 
 @media screen and (max-width: 375px)  {
 
-
+  .BG5{
+    height: 50%;
+  }
 
   section {
     padding: 1em 3em;
