--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -956,7 +956,7 @@ input[type="submit"]:hover {
   
 }
 
-@media screen and (max-width: 375px)  {
+@media screen and (min-width: 375px)  {
 
   .BG5{
     height: 50%;
