--- a/styles/style.css
+++ b/styles/style.css
@@ -883,79 +883,19 @@ input[type="submit"]:hover {
 
 
 
-@media screen and (max-width: 640px) and (min-width: 365px) {
-  .phone{
-    display: none;
-  }
-
-  .footer.active{
-    display: none;
-  }
-  
 
 
 
-
-
-  .section-heading span {
-    position: absolute;
-    left: -56px;
-
-  }
-/* 
-  .section-heading{
-    position: relative;
-    left: 5px;
-  } */
-
-  .centered h1{
-    font-size: 5rem;
-    position: relative;
-    left: 85%;
-    top: -28px;
-    color:rgb(20, 19, 19)
-  }
+@media screen and (max-width: 375px)  {
 
 
   .heroIMG{
     display: none;
   }
 
-  .centered button{
-    position: absolute;
-    left: 70%;
-    top: 110%;
+  .phone{
+    display: none;
   }
-
-  .button1{
-    width: 200px;
-    height: 70px;
-  }
-
-  .mobile{
-    display: block;
-    width: 100px;
-    height: auto;
-    position: absolute;
-    left: 15%;
-    top: 29%;
-  }
-
-  .centered h3{
-
-    position: relative;
-    left: 50%;
-    font-size: 1.7em;
-
-  }
-
-
-  
-}
-
-@media screen and (min-width: 375px)  {
-
-
 
   section {
     padding: 1em 3em;
